# atemr_description

./: CMakeLists.txt  README.md  package.xml
launch/: bringup.launch  bringup_dev.launch  wake_real.launch  wake_sim.launch
meshes/: base.dae  base_col.stl  battery.dae  battery.stl  caster.dae  caster.stl  caster_col.stl  coordinates.txt  coordinates2.txt  realsense_camera.dae  realsense_camera_col.stl  rplidar.dae  rplidar_col.stl  tablet_support_col.stl  wheel.dae  wheel.stl  wheel_col.stl
rviz/: atemr.rviz  atemr_nav.rviz
urdf/: robot.urdf.xacro
urdf/common/: common.urdf.xacro  materials.urdf.xacro
urdf/extras/: support_macro.urdf.xacro
urdf/sensors/: camera_macro.urdf.xacro  imu_macro.urdf.xacro  irs_macro.urdf.xacro  rplidar_macro.urdf.xacro
urdf/wheels/: caster_wheel_macro.urdf.xacro  traction_wheels_macro.urdf.xacro
