<?xml version="1.0"?>
<package format="2">
  <name>atemr_description</name>
  <version>0.0.0</version>
  <description>The atemr_description package</description>

  <maintainer email="ephsoneffa.guakro@alumnos.uva.es">ephson</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/meshes"/>
  </export>
</package>
